# jays

./: LICENCE.txt  README.adoc  README.md  pyproject.toml
src/: __init__.py  where.py
src/jays/: __init__.py  expressions.py  parser.py  utils.py
tests/: query_test.py  test_where.py
tests/query/: advanced.py  boolean.py  filters.py  flatten.py  select.py  slices.py  utils.py
